  automatically convert an object going to a response to JSON, and
  converts JSON coming in as a request body from JSON to an
  object. See http://morepath.readthedocs.org/en/latest/json.html for
  more information.

- ``defer_links`` directive. This directive can be used to declare
  that a particular mounted application takes care of linking to
  instances of a class. This lets you combine applications with more
  ease.

- ``app.ancestors()`` method and ``app.root`` attribute. These can be
  used for convenient access to the ancestor apps of a mounted
  application. To access from the request, use ``request.app.root``
  and ``request.app.ancestors()``.

- Several generic functions that weren't really pulling their weight
  are now gone as part of the mount simplification:
  ``generic.context`` and ``generic.traject`` are not needed anymore.

- Minor improvement in docstrings.

0.6 (2014-09-08)
================

- Fix documentation on the ``with`` statement; it was not using the local
  ``view`` variable correctly.

- Add #morepath IRC channel to the community docs.

- Named mounts. Instead of referring to the app class when
  constructing a link to an object in an application mounted
  elsewhere, you can put in the name of the mount. The name of the
  mount can be given explicitly in the mount directive but defaults to
  the mount path.

  This helps when an application is mounted several times and needs to
  generate different links depending on where it's mounted; by
  referring to the application by name this is loosely coupled and
  will work no matter what application is mounted under that name.

  This also helps when linking to an application that may or may not
  be present; instead of doing an import while looking for
  ``ImportError``, you can try to construct the link and you'll get a
  ``LinkError`` exception if the application is not there. Though this
  still assumes you can import the model class of what you're linking
  to.

  (see issue #197)
